<resources>
    <string name="app_name">Распознавание речи (Demo)</string>
    <string name="action_load_wav">Загрузить wav-файл</string>
    <string name="action_load_archive">Загрузить архив wav-файлов</string>
    <string name="action_load_one_example">Пример wav-файла</string>
    <string name="action_load_zip_example">Примеры в архиве</string>
    <string name="fourer_spectrum">Спектр Фурье</string>
    <string name="chebyshev_spectrum">Спектр Чебышева</string>
    <string name="str_border">Граница</string>
    <string name="str_segment">Сегментировать</string>
    <string name="str_reload">Обновить</string>
    <string name="str_nothing_to_show">Загрузите файл или архив с помощью бокового меню</string>
    <string name="message_text">Выберите файл</string>
    <string name="recognise">Распознать</string>
    <string name="ok_button">Ясненько</string>
    <string name="str_n">N</string>
    <string name="str_fcp">FCP</string>
    <string name="txt_wait">Подождите немного</string>

    <!-- Ошибки -->
    <string name="err_file_not_found">Файл почему-то не найден</string>
    <string name="err_permissions_denied">Дайте, пожалуйста, разрешение на доступ к файлам</string>
    <string name="err_button_perm_den">Дать</string>
    <string name="err_file_manager">Пожалуйста, установите файловый менеджер</string>
    <string name="err_file_for_download">Выберите файл для загрузки</string>

    <!-- Drawer Menu -->
    <string name="action_to_store">Оценить приложение</string>
    <string name="action_to_github">Ссылка на GitHub</string>
    <string name="example_wav_url">https://goo.gl/zD7VsY</string>
    <string name="example_zip_url">https://goo.gl/GDvqWQ</string>
    <string name="github_url">https://github.com/TalbotGooday/Rec</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="title_activity_result_tabbed">ResultTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="wait_please">Подождите немного</string>
</resources>
